fix more code smells with priority major